# TASK-102

./: .gitignore  metadata.json
repo/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_tests.sh
repo/API_tests/: run_api_tests.sh
repo/migrations/00000000000001_create_roles/: down.sql  up.sql
repo/migrations/00000000000002_create_users/: up.sql
repo/migrations/00000000000003_create_permission_points/: down.sql  up.sql
repo/migrations/00000000000004_create_role_permissions/: up.sql
repo/migrations/00000000000005_create_api_capabilities/: down.sql  up.sql
repo/migrations/00000000000006_create_menu_scopes/: down.sql  up.sql
repo/migrations/00000000000007_create_delegations/: up.sql
repo/migrations/00000000000008_create_approval_policies/: down.sql  up.sql
repo/migrations/00000000000009_create_approval_requests/: down.sql  up.sql
repo/migrations/00000000000010_create_login_attempts/: up.sql
repo/migrations/00000000000011_seed_data/: down.sql  up.sql
repo/migrations/00000000000012_create_orders/: up.sql
repo/migrations/00000000000013_create_order_line_items/: up.sql
repo/migrations/00000000000014_create_ledger_entries/: down.sql  up.sql
repo/migrations/00000000000015_create_receipts/: up.sql
repo/migrations/00000000000016_create_idempotency_keys/: up.sql
repo/migrations/00000000000017_create_register_closings/: down.sql  up.sql
repo/src/: config.rs  db.rs  errors.rs  export_worker.rs  main.rs  routes.rs  schema.rs
repo/src/audit/: middleware.rs  (+1 more)
repo/unit_tests/: README.md  run_unit_tests.sh
(+131 files in other folders)
