[package]
name = "retailops"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2"
diesel-derive-enum = { version = "2", features = ["postgres"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
actix-multipart = "0.7"
futures-util = "0.3"
